Fix misaligned feed author link on mobile

--- a/src/AppViewLite.Web/wwwroot/app.css
+++ b/src/AppViewLite.Web/wwwroot/app.css
@@ -115,6 +115,10 @@ main {
         display: flex;
     }
 
+    .feed-author-link {
+        top: 70px !important; 
+    }
+
     .scroll-up-button {
         left: 15px;
         bottom: 75px;
